# clean-text

./: .editorconfig  .gitignore  .travis.yml  CHANGELOG.md  LICENSE  Pipfile  README.md  RELEASING.md  pyproject.toml  setup.py
.github/workflows/: test.yml
benchmarks/: README.md  bench_clean_texts.py
clean-text/: __init__.py
cleantext/: __init__.py  clean.py  compat.py  constants.py  sklearn.py  specials.py  utils.py
tests/: test_clean.py  test_clean_transformer.py
