[tool.poetry]
authors = ["Johannes Filter <hi@jfilter.de>"]
classifiers = [
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "License :: OSI Approved :: Apache Software License",
]
description = "Functions to preprocess and normalize text."
keywords = ["natural-language-processing", "text-cleaning", "text-preprocessing", "text-normalization", "user-generated-content"]
license = "Apache-2.0"
name = "clean-text"
packages = [
  {include = "cleantext"},
]
readme = "README.md"
version = "0.5.0"

[tool.poetry.dependencies]
emoji = "*"
ftfy = {version = "^6.0"}
python = ">=3.6"
unidecode = {version = "^1.1.1", optional = true}

[tool.poetry.dev-dependencies]
black = {version = "*", allow-prereleases = true, python = ">=3.6"}
pylint = "*"
pytest = "*"
unidecode = "*"

[tool.poetry.extras]
gpl = ["unidecode"]

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
