[tool.poetry]
authors = ["Johannes Filter <hi@jfilter.de>"]
classifiers = [
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: Apache Software License",
]
description = "Functions to preprocess and normalize text."
keywords = ["natural-language-processing", "text-cleaning", "text-preprocessing", "text-normalization", "user-generated-content"]
license = "Apache-2.0"
name = "clean-text"
packages = [
  {include = "cleantext"},
]
readme = "README.md"
version = "0.6.0"

[tool.poetry.dependencies]
emoji = "^1.0.0"
ftfy = {version = "^6.0"}
pandas = {version = "^1.0.0", optional = true}
python = ">=3.7"
scikit-learn = {version = "^1.0.0", optional = true}
unidecode = {version = "^1.1.1", optional = true}

[tool.poetry.dev-dependencies]
black = {version = "*", allow-prereleases = true}
pandas = "*"
pylint = "*"
pytest = "*"
scikit-learn = "*"
unidecode = "*"

[tool.poetry.extras]
gpl = ["unidecode"]
sklearn = ["pandas", "scikit-learn"]

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
