[tool.poetry]
authors = ["Johannes Filter <hi@jfilter.de>"]
classifiers = [
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: Apache Software License",
]
description = "Functions to preprocess and normalize text."
keywords = ["natural-language-processing", "text-cleaning", "text-preprocessing", "text-normalization", "user-generated-content"]
license = "Apache-2.0"
name = "clean-text"
packages = [
  {include = "cleantext"},
]
readme = "README.md"
version = "0.6.0"

[tool.poetry.dependencies]
emoji = ">=2.1.0"
ftfy = {version = "^6.0"}
pandas = {version = ">=1.0.0,<3.0.0", optional = true}
python = ">=3.9"
scikit-learn = {version = ">=1.5.0", optional = true}
unidecode = {version = "^1.1.1", optional = true}

[tool.poetry.group.dev.dependencies]
pandas = "*"
pytest = "*"
ruff = "*"
scikit-learn = "*"
unidecode = "*"

[tool.poetry.extras]
gpl = ["unidecode"]
sklearn = ["pandas", "scikit-learn"]

[tool.ruff]
target-version = "py39"
line-length = 119

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"cleantext/__init__.py" = ["F403"]
"cleantext/constants.py" = ["E501"]
"cleantext/specials.py" = ["E501"]
"tests/*" = ["E501"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
